--- a/.github/workflows/lighthouse-ci.yaml
+++ b/.github/workflows/lighthouse-ci.yaml
@@ -27,7 +27,7 @@ jobs:
 
       - name: run Lighthouse CI
         run: |
-          npm install && npm install -g @lhci/cli@0.14.x
+          yarn global add @lhci/cli@0.14.x
           lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
