--- a/.github/workflows/lighthouse-ci.yaml
+++ b/.github/workflows/lighthouse-ci.yaml
@@ -27,7 +27,6 @@ jobs:
 
       - name: run Lighthouse CI
         run: |
-          yarn global add @lhci/cli@0.14.x
-          lhci autorun
+          yarn dlx @lhci/cli@0.14.x autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
