--- a/.github/workflows/lighthouse-ci.yaml
+++ b/.github/workflows/lighthouse-ci.yaml
@@ -25,8 +25,10 @@ jobs:
       - name: Build
         run: yarn build
 
-      - name: run Lighthouse CI
-        run: |
-          yarn dlx @lhci/cli@0.14.x autorun
+      - name: Install Lighthouse CI
+        run: yarn global add @lhci/cli
+
+      - name: Run Lighthouse CI
+        run: lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
